# bridge-sdk-rs

./: .catalog-info.yaml  CLAUDE.md  CODEOWNERS  Cargo.toml  PR_DRAFT.md  README.md  coin-selection-recommendation.md  dist-workspace.toml
.github/prompts/: pr-review.prompt.md
.github/workflows/: claude-pr-review.yml  entitites.json  release.yml  security-analysis.yml
bridge-cli/: Cargo.toml  README.md
bridge-cli/src/: defaults.rs  fee.rs  main.rs  omni_connector_command.rs
bridge-sdk/bridge-clients/aptos-bridge-client/: Cargo.toml
bridge-sdk/bridge-clients/aptos-bridge-client/src/: aptos_bridge_client.rs  builder.rs  error.rs  rest.rs  transaction.rs
bridge-sdk/bridge-clients/btc-bridge-client/: Cargo.toml
bridge-sdk/bridge-clients/btc-bridge-client/src/: btc_bridge_client.rs  types.rs  utxo_bridge_client.rs  zcash_bridge_client.rs
bridge-sdk/bridge-clients/evm-bridge-client/: Cargo.toml
bridge-sdk/bridge-clients/evm-bridge-client/src/: builder.rs  error.rs  evm_bridge_client.rs
bridge-sdk/bridge-clients/hypercore-bridge-client/: Cargo.toml
bridge-sdk/bridge-clients/hypercore-bridge-client/src/: action.rs  builder.rs  encoders.rs  error.rs  hypercore_bridge_client.rs  info.rs  signing.rs
bridge-sdk/bridge-clients/near-bridge-client/: Cargo.toml
bridge-sdk/bridge-clients/near-bridge-client/src/: btc.rs  btc_connector.rs  near_bridge_client.rs
bridge-sdk/bridge-clients/solana-bridge-client/: Cargo.toml
bridge-sdk/bridge-clients/solana-bridge-client/src/: error.rs  instructions.rs  solana_bridge_client.rs
bridge-sdk/bridge-clients/solana-optimistic-poc-client/src/: lib.rs
bridge-sdk/bridge-clients/starknet-bridge-client/: Cargo.toml
bridge-sdk/bridge-clients/starknet-bridge-client/src/: builder.rs  error.rs  rpc_transport.rs  starknet_bridge_client.rs
bridge-sdk/bridge-clients/utxo-bridge-client/: Cargo.toml
bridge-sdk/bridge-clients/utxo-bridge-client/src/: error.rs  types.rs  utxo_bridge_client.rs
bridge-sdk/bridge-clients/utxo-bridge-client/src/test_data/: zcash_block_2300000.hex
bridge-sdk/btc-clients/: Cargo.toml
bridge-sdk/btc-clients/src/: btc_proof.rs
bridge-sdk/btc-utils/: Cargo.toml
bridge-sdk/btc-utils/simulator/: Makefile  choose-utxo-simulator.rs
bridge-sdk/btc-utils/src/: address.rs  coin_selection.rs  coin_selection_random.rs  lib.rs
bridge-sdk/connectors/bridge-connector-common/: Cargo.toml
bridge-sdk/connectors/bridge-connector-common/src/: result.rs
bridge-sdk/connectors/omni-connector/: Cargo.toml
bridge-sdk/connectors/omni-connector/src/: omni_connector.rs  zcash.rs
bridge-sdk/crypto-utils/: Cargo.toml
bridge-sdk/crypto-utils/src/: lib.rs
bridge-sdk/eth-light-client/: Cargo.toml
bridge-sdk/eth-light-client/src/: eth_light_client.rs
bridge-sdk/eth-proof/src/: proof_generator.rs
bridge-sdk/light-client/: Cargo.toml
bridge-sdk/light-client/src/: light_client.rs
bridge-sdk/near-rpc-client/: Cargo.toml
bridge-sdk/near-rpc-client/src/: error.rs  near_rpc_client.rs
bridge-sdk/utxo-utils/: Cargo.toml
bridge-sdk/utxo-utils/src/: address.rs  anchor_fill.rs  lib.rs
docs/: pr183-feedback-ideas.md
legacy-bridge-cli/src/: main.rs
legacy-bridge-sdk/connectors/eth-connector/: Cargo.toml
legacy-bridge-sdk/connectors/fast-bridge/: Cargo.toml
legacy-bridge-sdk/connectors/nep141-connector/: Cargo.toml
legacy-bridge-sdk/near-rpc-client/src/: near_rpc_client.rs
scripts/: active_utxo_mgmt.sh
