[package]
name = "btc-utils"
version = "0.0.0"
edition = "2021"

[dependencies]
bitcoin.workspace = true
serde.workspace = true
serde_with.workspace = true
bridge-connector-common = { path = "../connectors/bridge-connector-common" }
rand = "0.8"

[dev-dependencies]
serde_json.workspace = true

[[example]]
name = "choose-utxo-simulator"
path = "simulator/choose-utxo-simulator.rs"
