[package]
name = "utxo-utils"
version = "0.2.0"
edition = "2021"

[dependencies]
bitcoin.workspace = true
bridge-connector-common = { path = "../connectors/bridge-connector-common" }
omni-types.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
near-sdk = "5.15.1"
zcash_address = "0.9.0"
zcash_protocol = "0.6.1"
k256 = "0.13.1"

