[package]
name = "near-bridge-client"
version = "0.2.10"
edition = "2021"

[dependencies]
bitcoin.workspace = true
borsh.workspace = true
derive_builder.workspace = true
near-crypto.workspace = true
near-jsonrpc-client.workspace = true
near-primitives.workspace = true
near-token.workspace = true
near-contract-standards.workspace = true
near-sdk = "5.17.2"
omni-types.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
tracing.workspace = true
near-rpc-client = { path = "../../near-rpc-client" }
bridge-connector-common = { path = "../../connectors/bridge-connector-common" }
utxo-utils = { path = "../../utxo-utils" }
base64 = "0.21.7"
futures = "0.3.31"

[lib]
path = "src/near_bridge_client.rs"
