[package]
name = "bridge-connector-common"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror.workspace = true
ethers.workspace = true
serde_json.workspace = true
solana-client.workspace = true
eth-proof = { path = "../../eth-proof" }
near-rpc-client = { path = "../../near-rpc-client" }
solana-bridge-client = { path = "../../bridge-clients/solana-bridge-client" }
