[package]
name = "omni-connector"
version = "0.2.11"
edition = "2021"

[dependencies]
sha3.workspace = true
bitcoin.workspace = true
borsh.workspace = true
ethers.workspace = true
derive_builder.workspace = true
hex.workspace = true
near-crypto.workspace = true
near-jsonrpc-client.workspace = true
near-primitives.workspace = true
near-token.workspace = true
near-contract-standards.workspace = true
omni-types.workspace = true
serde_json.workspace = true
tracing.workspace = true
solana-sdk.workspace = true
eth-light-client.workspace = true
eth-proof = { path = "../../eth-proof" }
near-rpc-client = { path = "../../near-rpc-client" }

zcash_primitives = { git = "https://github.com/olga24912/librustzcash", rev = "23ae1b3eb53ad14671dd5e7d05931bf43d5c9ced", default-features = false, features = ["circuits", "test-dependencies", "transparent-inputs"] } #{ version = "0.26.1", default-features = false, features = ["circuits", "test-dependencies", "transparent-inputs"] }
zcash_transparent = { git = "https://github.com/olga24912/librustzcash", rev = "23ae1b3eb53ad14671dd5e7d05931bf43d5c9ced", features = ["transparent-inputs"] } #{ version = "0.6.1", features = ["transparent-inputs"] }
zcash_protocol = { git = "https://github.com/olga24912/librustzcash", rev = "23ae1b3eb53ad14671dd5e7d05931bf43d5c9ced" } #"0.7.1"
pczt = { git = "https://github.com/olga24912/librustzcash", rev = "23ae1b3eb53ad14671dd5e7d05931bf43d5c9ced", features = ["std", "signer", "io-finalizer", "prover", "signer", "tx-extractor", "spend-finalizer", "zcp-builder", "tx-extractor"] } #{ version = "0.5.0", features = ["std", "signer", "io-finalizer", "prover", "signer", "tx-extractor", "spend-finalizer", "zcp-builder", "tx-extractor"] }
bip0039 = "0.12.0"
zcash_keys = "0.12.0"
orchard = { git = "https://github.com/Near-One/orchard", rev = "a343552ea2ec90365481da4755a720ce2ace525b", default-features = false }
zcash_address = { git = "https://github.com/olga24912/librustzcash", rev = "23ae1b3eb53ad14671dd5e7d05931bf43d5c9ced" }#"0.9"

crypto-utils = { path = "../../crypto-utils" }
utxo-utils = { path = "../../utxo-utils" }
bridge-connector-common = { path = "../bridge-connector-common" }

near-bridge-client = { path = "../../bridge-clients/near-bridge-client" }
evm-bridge-client = { path = "../../bridge-clients/evm-bridge-client" }
solana-bridge-client = { path = "../../bridge-clients/solana-bridge-client" }
wormhole-bridge-client = { path = "../../bridge-clients/wormhole-bridge-client" }
utxo-bridge-client = { path = "../../bridge-clients/utxo-bridge-client" }
ripemd = "0.1.3"
sha2 = "0.10.9"
bincode = "1.3.3"
incrementalmerkletree = "0.8.2"
anyhow = "1.0.99"
[lib]
path = "src/omni_connector.rs"
