[package]
name = "omni-connector"
version = "0.2.20"
edition = "2021"

[dependencies]
sha3.workspace = true
bitcoin.workspace = true
borsh.workspace = true
ethers.workspace = true
derive_builder.workspace = true
hex.workspace = true
near-crypto.workspace = true
near-jsonrpc-client.workspace = true
near-primitives.workspace = true
near-token.workspace = true
near-contract-standards.workspace = true
near-sdk = "5.17.2"
omni-types.workspace = true
serde_json.workspace = true
tracing.workspace = true
solana-sdk.workspace = true
light-client.workspace = true
eth-proof = { path = "../../eth-proof" }
near-rpc-client = { path = "../../near-rpc-client" }

zcash_primitives = { git = "https://github.com/Near-One/librustzcash", rev = "4a9d9814478162c1b5191cc83808bf1686f3713b", default-features = false, features = ["circuits", "test-dependencies", "transparent-inputs"] }
zcash_transparent = { git = "https://github.com/Near-One/librustzcash", rev = "4a9d9814478162c1b5191cc83808bf1686f3713b", features = ["transparent-inputs"] }
zcash_protocol = { git = "https://github.com/Near-One/librustzcash", rev = "4a9d9814478162c1b5191cc83808bf1686f3713b" }
pczt = { git = "https://github.com/Near-One/librustzcash", rev = "4a9d9814478162c1b5191cc83808bf1686f3713b", features = ["std", "signer", "io-finalizer", "prover", "signer", "tx-extractor", "spend-finalizer", "zcp-builder"] }
bip0039 = "0.12.0"
zcash_keys = "0.12.0"
orchard = { git = "https://github.com/Near-One/orchard", rev = "a43977f07e6fdadff214bb081a481756a28b41fc", default-features = false }
zcash_address = { git = "https://github.com/Near-One/librustzcash", rev = "4a9d9814478162c1b5191cc83808bf1686f3713b" }

crypto-utils = { path = "../../crypto-utils" }
utxo-utils = { path = "../../utxo-utils" }
bridge-connector-common = { path = "../bridge-connector-common" }

near-bridge-client = { path = "../../bridge-clients/near-bridge-client" }
evm-bridge-client = { path = "../../bridge-clients/evm-bridge-client" }
solana-bridge-client = { path = "../../bridge-clients/solana-bridge-client" }
wormhole-bridge-client = { path = "../../bridge-clients/wormhole-bridge-client" }
utxo-bridge-client = { path = "../../bridge-clients/utxo-bridge-client" }
ripemd = "0.1.3"
sha2 = "0.10.9"
bincode = "1.3.3"
incrementalmerkletree = "0.8.2"
anyhow = "1.0.99"

[lib]
path = "src/omni_connector.rs"
