[package]
name = "omni-connector"
version = "0.2.20"
edition = "2021"

[dependencies]
sha3.workspace = true
bitcoin.workspace = true
borsh.workspace = true
ethers.workspace = true
derive_builder.workspace = true
hex.workspace = true
near-crypto.workspace = true
near-jsonrpc-client.workspace = true
near-primitives.workspace = true
near-token.workspace = true
near-contract-standards.workspace = true
near-sdk = "5.17.2"
omni-types.workspace = true
serde_json.workspace = true
tracing.workspace = true
solana-sdk.workspace = true
light-client.workspace = true
eth-proof = { path = "../../eth-proof" }
near-rpc-client = { path = "../../near-rpc-client" }

zcash_primitives.workspace = true
zcash_transparent.workspace = true
zcash_protocol.workspace = true
pczt.workspace = true
bip0039.workspace = true
zcash_keys.workspace = true
orchard.workspace = true
zcash_address.workspace = true

crypto-utils = { path = "../../crypto-utils" }
utxo-utils = { path = "../../utxo-utils" }
bridge-connector-common = { path = "../bridge-connector-common" }

near-bridge-client = { path = "../../bridge-clients/near-bridge-client" }
evm-bridge-client = { path = "../../bridge-clients/evm-bridge-client" }
solana-bridge-client = { path = "../../bridge-clients/solana-bridge-client" }
wormhole-bridge-client = { path = "../../bridge-clients/wormhole-bridge-client" }
utxo-bridge-client = { path = "../../bridge-clients/utxo-bridge-client" }
ripemd = "0.1.3"
sha2 = "0.10.9"
bincode = "1.3.3"

[lib]
path = "src/omni_connector.rs"
